// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`lib/tap error rendering catalogue > AMBIGUOUS_COMMAND 1`] = `
"> cypress tap command --test-id r7 --command-id 1
That command id matches more than one row of the test.

"1" matches:

  h2:1 (before each)
  h3:1 (before each)
  h5:1 (after each)

Qualify the id with the section it belongs to, as {color:cyan}cypress tap reporter{/color} lists it."
`;

exports[`lib/tap error rendering catalogue > ATTEMPT_NOT_FOUND 1`] = `
"> cypress tap reporter --test-id r7 --attempt 5
No attempt of this test matched that number.

Looked for {color:cyan}--attempt{/color} 5. Test "r7" has 3 attempts.

{color:cyan}--attempt{/color} selects an earlier attempt of a retried test; attempt 1 is the first run. Omit it for the latest."
`;

exports[`lib/tap error rendering catalogue > BINDING_NOT_FOUND 1`] = `
"> cypress tap status
Could not reach the Cypress session.

Make sure Cypress is still open with a browser, then run the command again. If it was just started, it may still be loading."
`;

exports[`lib/tap error rendering catalogue > BINDING_THREW 1`] = `
"> cypress tap reporter
The Cypress session failed while running the command.

Check the Cypress session with {color:cyan}cypress tap status{/color}, then try again.

If the problem persists, search for an existing issue or open a GitHub issue at

  {color:blue}https://github.com/cypress-io/cypress/issues{/color}"
`;

exports[`lib/tap error rendering catalogue > CDP_UNREACHABLE 1`] = `
"> cypress tap status
Could not reach the Cypress session.

Make sure Cypress is still open with a browser, then run the command again. If it was just started, it may still be loading."
`;

exports[`lib/tap error rendering catalogue > CLI_OUTDATED 1`] = `
"> cypress tap status
The targeted Cypress session is newer than this CLI.

The Cypress session is running Cypress v16.2.0; this CLI is v15.20.1.

Update the CLI with {color:cyan}npm install --save-dev cypress@latest{/color}, then try again."
`;

exports[`lib/tap error rendering catalogue > COMMAND_NOT_FOUND 1`] = `
"> cypress tap command --test-id r7 --command-id 9
No command in this test matched that id.

Looked for {color:cyan}--command-id{/color} "9".

Run {color:cyan}cypress tap reporter --test-id <id>{/color} to list the commands in the test."
`;

exports[`lib/tap error rendering catalogue > FRAME_READ_FAILED 1`] = `
"> cypress tap dom --selector ".item"
The Cypress session failed while running the command.

Check the Cypress session with {color:cyan}cypress tap status{/color}, then try again.

If the problem persists, search for an existing issue or open a GitHub issue at

  {color:blue}https://github.com/cypress-io/cypress/issues{/color}"
`;

exports[`lib/tap error rendering catalogue > GRAPHQL_FAILED 1`] = `
"> cypress tap specs
The Cypress session failed while running the command.

Check the Cypress session with {color:cyan}cypress tap status{/color}, then try again.

If the problem persists, search for an existing issue or open a GitHub issue at

  {color:blue}https://github.com/cypress-io/cypress/issues{/color}"
`;

exports[`lib/tap error rendering catalogue > GRAPHQL_UNREACHABLE 1`] = `
"> cypress tap specs
Could not reach the Cypress session.

Make sure Cypress is still open with a browser, then run the command again. If it was just started, it may still be loading."
`;

exports[`lib/tap error rendering catalogue > INSTANCE_NOT_FOUND 1`] = `
"> cypress tap --instance 4321 dom --selector "#status"
No Cypress session matched the provided instance id.

Looked for {color:cyan}--instance{/color} 4321.

Run {color:cyan}cypress tap instances{/color} to list the Cypress sessions you can tap into."
`;

exports[`lib/tap error rendering catalogue > INSTANCE_OUTDATED 1`] = `
"> cypress tap status
The targeted Cypress session is older than this CLI.

The Cypress session is running Cypress v15.20.1; this CLI is v16.2.0.

Update Cypress in the running project with {color:cyan}npm install --save-dev cypress@latest{/color}, restart it, then try again."
`;

exports[`lib/tap error rendering catalogue > INVALID_ARGUMENTS 1`] = `
"> cypress tap run
The command was called with invalid arguments.

"run" is missing the required <spec> argument.

Usage: cypress tap run [options] <spec>

run (or rerun) a spec by its project-relative path

Arguments:
  spec                  project-relative spec path, as listed by the specs
                        command

Options:
  -i, --instance <pid>  target a specific running Cypress instance by its
                        server process id (pid)
  --json                print the raw JSON result instead of the human-readable
                        rendering
  --timeout <ms>        how long to wait on any single call into the running
                        Cypress, in milliseconds (default: 30000)
  -h, --help            display help for command"
`;

exports[`lib/tap error rendering catalogue > INVALID_OPTIONS 1`] = `
"> cypress tap reporter
The command was called with invalid options.

"reporter" is missing the required --test-id option.

Usage: cypress tap reporter [options]

render a test’s full reporter view — its routes, hooks, and command log — or, without --test-id, the spec-level overview: the spec’s stats and every suite’s tests

Options:
  -t, --test-id <test-id>  test id, as listed by the reporter command
  -a, --attempt <attempt>  1-based attempt (attempt 1 = first run); defaults to
                           the latest
  -i, --instance <pid>     target a specific running Cypress instance by its
                           server process id (pid)
  --json                   print the raw JSON result instead of the
                           human-readable rendering
  --timeout <ms>           how long to wait on any single call into the running
                           Cypress, in milliseconds (default: 30000)
  -h, --help               display help for command"
`;

exports[`lib/tap error rendering catalogue > INVALID_VALUE 1`] = `
"> cypress tap dom --selector ".item" --at 5
An invalid value was given.

Expected {color:cyan}--at{/color} to be 0 to 2, since ".item" matched 3 elements.

Instead the value was: "5""
`;

exports[`lib/tap error rendering catalogue > MISSING_COMPANION_OPTION 1`] = `
"> cypress tap reporter --attempt 2
You passed the {color:cyan}--attempt{/color} flag without also passing the {color:cyan}--test-id{/color} flag.

Pass {color:cyan}--test-id{/color} to specify the test, or omit {color:cyan}--attempt{/color} to review the latest attempt for every test in the spec."
`;

exports[`lib/tap error rendering catalogue > NO_AUT 1`] = `
"> cypress tap dom --selector "#status"
Failed to determine the app under test in the Cypress session.

Run the spec again with {color:cyan}cypress tap run <spec>{/color}. To read the app as it was at an earlier command, pin that command with {color:cyan}cypress tap pin{/color}."
`;

exports[`lib/tap error rendering catalogue > NO_BROWSER_ATTACHED 1`] = `
"> cypress tap dom --selector "#status"
The Cypress session is running, but no test browser is open.

Open a Chromium-based browser in Cypress, then try again."
`;

exports[`lib/tap error rendering catalogue > NO_INSTANCE 1`] = `
"> cypress tap dom --selector "#status"
Could not find a Cypress session to tap into.

Start Cypress with {color:cyan}cypress open{/color}, select a testing type and launch a browser, then try again."
`;

exports[`lib/tap error rendering catalogue > NO_PROJECT 1`] = `
"> cypress tap run cypress/e2e/checkout.cy.ts
The Cypress session has no project open.

Open a project in Cypress, then try again."
`;

exports[`lib/tap error rendering catalogue > PROTOCOL_MISMATCH 1`] = `
"> cypress tap status
An error occurred.

Try running the command again.

If the problem persists, search for an existing issue or open a GitHub issue at

  {color:blue}https://github.com/cypress-io/cypress/issues{/color}"
`;

exports[`lib/tap error rendering catalogue > RENDERER_UNRESPONSIVE 1`] = `
"> cypress tap dom --selector "#status"
The Cypress session is reachable, but the page running it is not responding.

No response within the specified timeout (30000ms).

It may be paused in DevTools, stuck in a loop, or starved of memory. Pass {color:cyan}--timeout <ms>{/color} to wait longer."
`;

exports[`lib/tap error rendering catalogue > SNAPSHOT_NOT_FOUND 1`] = `
"> cypress tap pin --test-id r7 --command-id 3 --at middle
No snapshot of this command matched that name or index.

Looked for {color:cyan}--at{/color} "middle". This command has these snapshots: 1 before, 2 after.

{color:cyan}--at{/color} takes a snapshot name or a 1-based index; omit it to pin the command’s final state."
`;

exports[`lib/tap error rendering catalogue > SNAPSHOT_UNAVAILABLE 1`] = `
"> cypress tap pin --test-id r7 --command-id 3
That command has no DOM snapshot to pin.

Snapshots are captured in open mode and kept only for the most recent tests, as {color:cyan}numTestsKeptInMemory{/color} sets. Run the spec again to capture fresh snapshots, or raise {color:cyan}numTestsKeptInMemory{/color} to keep more."
`;

exports[`lib/tap error rendering catalogue > SPEC_IN_PROGRESS 1`] = `
"> cypress tap dom --selector "#status"
The spec cypress/e2e/checkout.cy.ts is currently running.

Use {color:cyan}cypress tap status{/color} to verify when the spec has finished."
`;

exports[`lib/tap error rendering catalogue > SPEC_NOT_FOUND 1`] = `
"> cypress tap run cypress/e2e/checkout.cy.ts
The Cypress session has no spec matching that path.

Looked for "cypress/e2e/checkout.cy.ts".

{color:cyan}cypress tap specs{/color} lists the specs the Cypress session can run. If the spec exists but is not listed, widen {color:cyan}specPattern{/color} in the Cypress configuration."
`;

exports[`lib/tap error rendering catalogue > SPEC_NOT_STARTED 1`] = `
"> cypress tap dom --selector "#status"
No spec has run yet.

Start a spec with the {color:cyan}run{/color} command, then read it once it has finished."
`;

exports[`lib/tap error rendering catalogue > SPEC_START_FAILED 1`] = `
"> cypress tap run cypress/e2e/checkout.cy.ts
The Cypress session could not start the spec.

The Cypress session returned no result for "cypress/e2e/checkout.cy.ts".

Check the Cypress session with {color:cyan}cypress tap status{/color}, then try again."
`;

exports[`lib/tap error rendering catalogue > STALE_HANDLE 1`] = `
"> cypress tap dom --selector "#status"
The Cypress session failed while running the command.

Check the Cypress session with {color:cyan}cypress tap status{/color}, then try again."
`;

exports[`lib/tap error rendering catalogue > STALE_INSTANCE 1`] = `
"> cypress tap --instance 4321 dom --selector "#status"
Could not reach the Cypress session.

Make sure Cypress is still open with a browser, then run the command again. If it was just started, it may still be loading."
`;

exports[`lib/tap error rendering catalogue > TEST_NOT_FOUND 1`] = `
"> cypress tap reporter --test-id r7
No test in this spec matched that id.

Looked for {color:cyan}--test-id{/color} "r7".

Run {color:cyan}cypress tap reporter{/color} to list the tests in the spec."
`;

exports[`lib/tap error rendering catalogue > TESTING_TYPE_NOT_CONFIGURED 1`] = `
"> cypress tap run cypress/e2e/checkout.cy.ts
That testing type is not configured for this project.

Configure it in the Cypress config, or start Cypress in a testing type the project supports.

Learn more:

  {color:blue}https://on.cypress.io/configuration{/color}"
`;

exports[`lib/tap error rendering catalogue > UNKNOWN_COMMAND 1`] = `
"> cypress tap oel2k
Unknown command "oel2k"

Usage: cypress tap [command] [args...] [options]

Interacts with a running Cypress instance

Options:
  -i, --instance <pid>  target a specific running Cypress instance by its
                        server process id (pid)
  --json                print the raw JSON result instead of the human-readable
                        rendering
  --timeout <ms>        how long to wait on any single call into the running
                        Cypress, in milliseconds (default: 30000)
  -h, --help            display help for command

Commands:
  instances [options]   list the running Cypress instances this CLI can reach
  status [options]      report where a running Cypress instance is in its
                        lifecycle
  specs [options]       list the specs the running Cypress instance can run,
                        most recently modified first
  run [options] <spec>  run (or rerun) a spec by its project-relative path
  dom [options]         read the app-under-test DOM as HTML: the page body,
                        or the one element a selector matches (with its
                        subtree)
  aria [options]        read the accessibility (ARIA) tree of the
                        app-under-test page body, or the subtree at a selector
  inspect [options]     inspect the element a selector matches: its tag,
                        attributes, computed styles, box model, and
                        accessibility node
  command [options]     detail one command log entry of a test — its reporter
                        row, the DOM snapshots pinnable on it, and its console
                        properties
  reporter [options]    render a test’s full reporter view — its routes,
                        hooks, and command log — or, without --test-id, the
                        spec-level overview: the spec’s stats and every suite’s
                        tests
  pin [options]         pin a command’s DOM snapshot into the live
                        app-under-test frame so the dom/aria/inspect commands
                        can read it; pass --clear to release"
`;

exports[`lib/tap error rendering catalogue > UNKNOWN_ERROR 1`] = `
"> cypress tap status
An error occurred.

Try running the command again.

If the problem persists, search for an existing issue or open a GitHub issue at

  {color:blue}https://github.com/cypress-io/cypress/issues{/color}"
`;

exports[`lib/tap error rendering catalogue > UNKNOWN_OPTION 1`] = `
"> cypress tap dom --bogus
Unknown option "--bogus"

Usage: cypress tap dom [options]

read the app-under-test DOM as HTML: the page body, or the one element a selector matches (with its subtree)

Options:
  -s, --selector <selector>    a CSS selector matching exactly one element
                               (default: "body")
  -m, --max-chars <max-chars>  cap on returned HTML characters (default: 30000)
  --at <at>                    0-based index of the match to read, as listed by
                               the index column when a selector matches several
  -i, --instance <pid>         target a specific running Cypress instance by
                               its server process id (pid)
  --json                       print the raw JSON result instead of the
                               human-readable rendering
  --timeout <ms>               how long to wait on any single call into the
                               running Cypress, in milliseconds (default:
                               30000)
  -h, --help                   display help for command"
`;
